[gd_scene load_steps=5 format=3 uid="uid://s0e6yohd54in"]

[ext_resource type="Script" path="res://UI/low_bar.gd" id="1_k85ib"]
[ext_resource type="Texture2D" uid="uid://btny6qxld110b" path="res://desaign/lowBar.png" id="2_pp7vn"]
[ext_resource type="Texture2D" uid="uid://bvhvgua0f3cdq" path="res://desaign/menu.png" id="3_sloed"]
[ext_resource type="FontFile" uid="uid://ddhtc6ay14j35" path="res://desaign/retro_computer_personal_use.ttf" id="4_53vt5"]

[node name="low_bar" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -183.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_k85ib")

[node name="ColorRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 128)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -87.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_pp7vn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_right = 203.0
offset_bottom = 202.0
grow_horizontal = 2

[node name="left" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_sloed")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/left"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_53vt5")
theme_override_font_sizes/font_size = 33
text = "task"

[node name="home" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_sloed")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/home"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_53vt5")
theme_override_font_sizes/font_size = 33
text = "home"

[node name="right" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_sloed")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_53vt5")
theme_override_font_sizes/font_size = 33
text = "habit"

[connection signal="button_down" from="HBoxContainer/left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="HBoxContainer/home" to="." method="_on_home_button_down"]
[connection signal="button_down" from="HBoxContainer/right" to="." method="_on_right_button_down"]
